# pretix-cashpayment

./: .gitlab-ci.yml  LICENSE  MANIFEST.in  README.rst  pretixplugin.toml  pyproject.toml  setup.py
pretix_cashpayment/: __init__.py  apps.py  payment.py  signals.py
pretix_cashpayment/locale/de/LC_MESSAGES/: django.po
pretix_cashpayment/locale/de_Informal/LC_MESSAGES/: django.po
pretix_cashpayment/locale/pt_BR/LC_MESSAGES/: django.po
pretix_cashpayment/templates/pretix_cashpayment/: checkout_payment_form.html  control.html  pending.html
pretix_cashpayment/templates/pretix_cashpayment/email/: order_pending.txt
