[project]
name = "pretix-cashpayment"
dynamic = ["version"]
description = "pretix plugin that allows you to offer your customers a \"pay with cash at the venue\" option."
readme = "README.rst"
requires-python = ">=3.9"
license = {file = "LICENSE"}
keywords = ["pretix"]
authors = [
    {name = "Martin Gross", email = "martin@pc-coholic.de"},
]
maintainers = [
    {name = "Martin Gross", email = "martin@pc-coholic.de"},
]

dependencies = [

]

[project.entry-points."pretix.plugin"]
pretix_cashpayment = "pretix_cashpayment:PretixPluginMeta"

[project.entry-points."distutils.commands"]
build = "pretix_plugin_build.build:CustomBuild"

[build-system]
requires = [
    "setuptools",
    "pretix-plugin-build",
]

[project.urls]
homepage = "http://github.com/pc-coholic/pretix-cashpayment"

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "pretix_cashpayment.__version__"}

[tool.setuptools.packages.find]
include = ["pretix*"]
namespaces = false
